src/test/ui/expr/if/if-without-block.stderr
error: expected `{`, found `}`
  --> $DIR/if-without-block.rs:7:1
   |
LL |     if 5 == {
   |     -- this `if` expression has a condition, but no block
...
LL | }
   | ^ expected `{`
   |
help: maybe you forgot the right operand of the condition?
  --> $DIR/if-without-block.rs:3:10
   |
LL |     if 5 == {
   |          ^^

error: aborting due to previous error

